2023-06-12_kubernetes_t-mobile/kubernetes-training/16_namespace_admin.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ondrejsika
