2023-06-12_kubernetes_t-mobile/kubernetes-training/04_03_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  revisionHistoryLimit: 0
  replicas: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hello-world-deploy
  template:
    metadata:
      labels:
        app: hello-world-deploy
        svc: example
    spec:
      containers:
        - name: main
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
