2023-06-12_kubernetes_t-mobile/kubernetes-training/05_clusterip_service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-clusterip
spec:
  # type: ClusterIP
  selector:
    app: example
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8080
      targetPort: 8000
