2023-06-12_kubernetes_t-mobile/kubernetes-training/probes_liveness.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveness
  labels:
    app: liveness
spec:
  replicas: 10
  selector:
    matchLabels:
      app: liveness
  template:
    metadata:
      labels:
        app: liveness
        svc: example
    spec:
      containers:
        - image: ondrejsika/liveness
          name: health
          livenessProbe:
            httpGet:
              path: /livez
              port: 800
            initialDelaySeconds: 5
            failureThreshold: 2
            periodSeconds: 1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 100Mi
              cpu: 20m
---
apiVersion: v1
kind: Service
metadata:
  name: liveness
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: liveness
