2023-06-12_kubernetes_t-mobile/kubernetes-training/counter-with-volume.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          command:
            - redis-server
          args:
            - --appendonly
            - "yes"
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  selector:
    matchLabels:
      app: counter
  replicas: 2
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: counter
          image: ondrejsika/counter
          resources:
            requests:
              cpu: 20m
              memory: 10Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  type: NodePort
  selector:
    app: counter
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  tls:
    - hosts:
        - counter.k8s.sikademo.com
      secretName: sticky-tls
  rules:
    - host: counter.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
