2023-06-12_kubernetes_t-mobile/kubernetes-training/ingress-do.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ondrejsika-nginx.k8s.sikademo.com
        - ondrejsika-apache.k8s.sikademo.com
        - ondrejsika-caddy.k8s.sikademo.com
      secretName: webservers-tls
  rules:
    - host: ondrejsika-nginx.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: ondrejsika-apache.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
    - host: ondrejsika-caddy.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
