2023-06-12_kubernetes_t-mobile/kubernetes-training/ingress-paths-do.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ondrejsika.k8s.sikademo.com
      secretName: webservers-paths-tls
  rules:
    - host: ondrejsika.k8s.sikademo.com
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /caddy(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
